1.评价模块开发。 2.上家模块开发。

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="static/css/reset.css">
     <title>mt-app</title>
+    <!--远程调试,我本地的IP-->
+    <!--<script src="http://192.168.1.23:8080/target/target-script-min.js#anonymous"></script>-->
   </head>
   <body>
     <div id="app"></div>
